# tree-sitter-ca65

./: .gitignore  Cargo.toml  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/ca65/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
